Do not try to load "guestViewIframe" module when guest view internal isn't required.

BUG=612617
Test=Start chromium, you shouldn't see any warning like this one:
chrome.guestViewInternal is not available:...

Review-Url: https://codereview.chromium.org/1983183003
Cr-Commit-Position: refs/heads/master@{#394311}

Former-commit-id: dd968e7e16f01d7062734ae66f74794a6a91c324